objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Email_for_Invoicing__c</fullName>
        <description>For specific situations, a company email may be used for invoicing purposes. Store the email address in this field.</description>
        <inlineHelpText>For specific situations, a company email may be used for invoicing purposes. Store the email address in this field.</inlineHelpText>
        <label>Account Email for Invoicing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_site_reference_Number__c</fullName>
        <description>Site specific number used by client or Best to identify site. Eg. DEC has a number for each school.</description>
        <label>Account (site) reference Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Service Company</fullName>
                </value>
                <value>
                    <fullName>Data Centre</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>ISP</fullName>
                </value>
                <value>
                    <fullName>ATM OEM</fullName>
                </value>
                <value>
                    <fullName>Client OEM</fullName>
                </value>
                <value>
                    <fullName>Mobile OEM</fullName>
                </value>
                <value>
                    <fullName>Network OEM</fullName>
                </value>
                <value>
                    <fullName>POS OEM</fullName>
                </value>
                <value>
                    <fullName>Print OEM</fullName>
                </value>
                <value>
                    <fullName>Server OEM</fullName>
                </value>
                <value>
                    <fullName>Other device OEM</fullName>
                </value>
                <value>
                    <fullName>Telco</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cloud Hosting</fullName>
                </value>
                <value>
                    <fullName>Digital Media Company</fullName>
                </value>
                <value>
                    <fullName>Digital Media OEM</fullName>
                </value>
                <value>
                    <fullName>Managed Print Provider</fullName>
                </value>
                <value>
                    <fullName>Sensitive Freight Company</fullName>
                </value>
                <value>
                    <fullName>Cabling Company/Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>Remarketing company</fullName>
                </value>
                <value>
                    <fullName>IOT Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Account_Id__c</fullName>
        <description>Used for transferring and migrating data from production to sandbox</description>
        <externalId>true</externalId>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>External Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Location__c</fullName>
        <description>This will be used to determine the SLA and or payment for this site based on its regional location category</description>
        <label>Regional location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metro</fullName>
                    <default>true</default>
                    <label>Metro</label>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts (Business Hours)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() -  i__LastMailTime__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Account</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Accounts (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>Time of the most recent email sent by this Account</description>
        <formula>i__LastInboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent by this Account</inlineHelpText>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundTime__c -  i__LastInboundTime__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>Time of the most recent email sent or received by this Account</description>
        <formula>i__LastMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent or received by this Account</inlineHelpText>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Account</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Accounts (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Account</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Accounts (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>Time of the most recent email sent to this Account</description>
        <formula>i__LastOutboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent to this Account</inlineHelpText>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>Classification__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notContain</operation>
            <value>Competitor,Site</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notContain</operation>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filters>
        <label>Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>Classification__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filters>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>VAR</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>equals</operation>
            <value>VAR</value>
        </filters>
        <label>VAR</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>